[gd_scene load_steps=20 format=3 uid="uid://b5ob880mpsigo"]

[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/BattleManager.gd" id="2_6ahfq"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/Battle Manager States/BattleStart.gd" id="2_t654k"]
[ext_resource type="Script" path="res://Scripts/Battle/Player Battle/Player Battle States/PBIdle.gd" id="2_tjx1h"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/Battle Manager States/PlayerTurn.gd" id="3_0nty4"]
[ext_resource type="Script" path="res://Scripts/Battle/Player Battle/Player Battle States/PBSelectAction.gd" id="3_bmh5h"]
[ext_resource type="Script" path="res://Scripts/Battle/Player Battle/Player Battle States/PBSelectTarget.gd" id="4_5ny27"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/Battle Manager States/EnemyTurn.gd" id="4_y71t8"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/Battle Manager States/ResolveTurn.gd" id="5_tl20t"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/Battle Manager States/EndBattle.gd" id="6_nchxf"]
[ext_resource type="Script" path="res://Scripts/Battle/Player Battle/PlayerBattleController.gd" id="8_e6ewj"]
[ext_resource type="Script" path="res://Scripts/Battle/Player Battle/PlayerActionCommands.gd" id="10_c8j50"]
[ext_resource type="PackedScene" uid="uid://cojhji8fg6py0" path="res://Scenes/UI/Battle/UI Battle Cursor.tscn" id="13_nw3rt"]
[ext_resource type="Script" path="res://Scripts/Battle/EnemyCombatant.gd" id="15_rir6a"]
[ext_resource type="Script" path="res://Scripts/Battle/BattleCursorController.gd" id="16_idmqv"]
[ext_resource type="PackedScene" uid="uid://d3oovqlxv70nw" path="res://Scenes/UI/Battle/Enemy Battle HUD.tscn" id="16_iosug"]
[ext_resource type="PackedScene" uid="uid://d0rud050eh1c1" path="res://Scenes/UI/Battle/Player Battle HUD.tscn" id="17_57lxs"]
[ext_resource type="Script" path="res://Scripts/Battle/Actions/ActionExecutor.gd" id="17_i3r5f"]
[ext_resource type="PackedScene" uid="uid://br2rfvg8hipbo" path="res://Scenes/UI/Battle/Battle Skills Menu.tscn" id="19_ayay8"]
[ext_resource type="Script" path="res://Scripts/Battle/Battle Manager/BattleDeathHandler.gd" id="20_pja1n"]

[node name="Combat" type="Node"]

[node name="BattleCursorController" type="Node" parent="." node_paths=PackedStringArray("canvas_layer", "enemy_battle_ui", "player_battle_ui")]
script = ExtResource("16_idmqv")
battle_cursor_scene = ExtResource("13_nw3rt")
canvas_layer = NodePath("../CanvasLayer")
enemy_battle_ui = NodePath("../CanvasLayer/Enemy Battle HUD")
player_battle_ui = NodePath("../CanvasLayer/Player Battle HUD")

[node name="PlayerBattleController" type="Node" parent="." node_paths=PackedStringArray("battle_manager", "player_action_commands", "spawned_combatants_node")]
script = ExtResource("8_e6ewj")
battle_manager = NodePath("../BattleManager")
player_action_commands = NodePath("../CanvasLayer/Player Commands")
spawned_combatants_node = NodePath("../Spawned Combatants")
initial_state = NodePath("PBIdle")

[node name="PBIdle" type="Node" parent="PlayerBattleController"]
script = ExtResource("2_tjx1h")

[node name="PBSelectAction" type="Node" parent="PlayerBattleController"]
script = ExtResource("3_bmh5h")

[node name="PBSelectTarget" type="Node" parent="PlayerBattleController" node_paths=PackedStringArray("battle_cursor_controller", "enemy_battle_hud")]
script = ExtResource("4_5ny27")
battle_cursor_controller = NodePath("../../BattleCursorController")
enemy_battle_hud = NodePath("../../CanvasLayer/Enemy Battle HUD")

[node name="BattleManager" type="Node" parent="." node_paths=PackedStringArray("death_handler", "player_battle_hud", "enemy_battle_hud", "spawned_combatants_node")]
script = ExtResource("2_6ahfq")
death_handler = NodePath("../BattleDeathHandler")
player_battle_hud = NodePath("../CanvasLayer/Player Battle HUD")
enemy_battle_hud = NodePath("../CanvasLayer/Enemy Battle HUD")
spawned_combatants_node = NodePath("../Spawned Combatants")
initial_state = NodePath("BattleStart")

[node name="BattleStart" type="Node" parent="BattleManager"]
script = ExtResource("2_t654k")

[node name="PlayerTurn" type="Node" parent="BattleManager"]
script = ExtResource("3_0nty4")

[node name="EnemyTurn" type="Node" parent="BattleManager"]
script = ExtResource("4_y71t8")

[node name="ResolveTurn" type="Node" parent="BattleManager" node_paths=PackedStringArray("action_executer")]
script = ExtResource("5_tl20t")
action_executer = NodePath("../../ActionExecutor")

[node name="EndBattle" type="Node" parent="BattleManager"]
script = ExtResource("6_nchxf")
homebase_home_scene = "res://Scenes/UI/Homebase/Homebase Home Menu.tscn"

[node name="ActionExecutor" type="Node" parent="." node_paths=PackedStringArray("death_handler")]
script = ExtResource("17_i3r5f")
death_handler = NodePath("../BattleDeathHandler")

[node name="BattleDeathHandler" type="Node" parent="." node_paths=PackedStringArray("spawned_combatants_node")]
script = ExtResource("20_pja1n")
spawned_combatants_node = NodePath("../Spawned Combatants")

[node name="Spawned Combatants" type="Node" parent="."]

[node name="Enemy Combatant 1" type="Node" parent="Spawned Combatants"]
script = ExtResource("15_rir6a")
experience_to_give_on_death = 150

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Enemy Battle HUD" parent="CanvasLayer" instance=ExtResource("16_iosug")]

[node name="Player Battle HUD" parent="CanvasLayer" instance=ExtResource("17_57lxs")]

[node name="Player Commands" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("attack_button", "special_button", "defend_button", "run_button", "battle_skills_menu")]
custom_minimum_size = Vector2(400, 100)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -280.0
offset_right = 200.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("10_c8j50")
attack_button = NodePath("HBoxContainer/Attack")
special_button = NodePath("HBoxContainer/Special")
defend_button = NodePath("HBoxContainer/Defend")
run_button = NodePath("HBoxContainer/Run")
battle_skills_menu = NodePath("../Battle Skills Menu")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Player Commands"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attack" type="Button" parent="CanvasLayer/Player Commands/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
focus_neighbor_left = NodePath("../Run")
text = "Attack"

[node name="Special" type="Button" parent="CanvasLayer/Player Commands/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Special"

[node name="Defend" type="Button" parent="CanvasLayer/Player Commands/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Defend
"

[node name="Run" type="Button" parent="CanvasLayer/Player Commands/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
focus_neighbor_right = NodePath("../Attack")
text = "Run
"

[node name="Battle Skills Menu" parent="CanvasLayer" instance=ExtResource("19_ayay8")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 87.0
offset_right = 4.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
